# Star-and-City

./: .gitignore  Cargo.toml  README.md  character_ky.gd  character_ky.tscn  project.godot  star-and-city.gdextension  test_scene_level.tscn
.github/workflows/: README.md
conceptual/: _scrapped.md  ego_gifts.md  general.md
conceptual/char/: _template.md  roland.md
godot/: character_ky.tscn  character_ky_v2.gd  character_ky_v2.tscn  icon.svg.import  ky_scene.gd  ky_scene.tscn  project.godot  star-and-city.gdextension  test_scene_level.gd  test_scene_level.tscn
godot/audio/bgm/: fight_angela.mp3.import  fight_kether.mp3.import  results.mp3.import  theme1.mp3.import
godot/img/other/: egogift_spritesheet.png.import  floor_of_philosophy.jpg.import  icon.webp.import
godot/scenes/: char_select_button.tscn
godot/scenes/char/: character_argalia.tscn  character_basic.tscn  character_ky.tscn  character_ky_v2.tscn  character_roland.tscn  rust_test.tscn
godot/scenes/stage/: character_select.tscn  floor_of_general_works.tscn  test_scene_level.tscn
godot/scenes/util/: fight_UI.tscn
godot/scripts/char/: character_argalia.gd  character_basic.gd  character_ky.gd  (+2 more)
godot/utils/: attack_values.gd  math.gd  physics.gd
rust/: Cargo.toml
rust/src/: errors.rs  lib.rs  main.rs  prelude.rs
rust/src/characters/: mod.rs
rust/src/characters/test_character/: mod.rs  states.rs
rust/src/generic/: character.rs
rust/src/utils/: mod.rs
rust/src/utils/math/: geometry.rs  mod.rs  quotient.rs
rust/src/utils/physics/: mod.rs
src/: main.rs  matchengine.rs  matchvisuals.rs
(+708 files in other folders)
