[package]
name = "star_and_city"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[configuration]
entry_symbol = "gdext_rust_init"
compatibility_minimum = 4.1

[libraries]
linux.debug.x86_64 = "res://../rust/target/debug/libstar-and-city.so"
linux.release.x86_64 = "res://../rust/target/release/libstar-and-city.so"
windows.debug.x86_64 = "res://../rust/target/debug/star-and-city.dll"
windows.release.x86_64 = "res://../rust/target/release/star-and-city.dll"
macos.debug = "res://../rust/target/debug/libstar-and-city.dylib"
macos.release = "res://../rust/target/release/libstar-and-city.dylib"

# NOTE: these two were recommended by the gdext guide, though they don't work.
#   macos.debug.arm64 = "res://../rust/target/debug/libstar-and-city.dylib"
#   macos.release.arm64 = "res://../rust/target/release/libstar-and-city.dylib"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
proc-macro2 = "1.0.66"

[profile.dev.package."*"]
opt-level = 3